plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

group = project.maven_group

base {
	version = project.mod_version
	archivesName = project.archives_base_name
}

repositories {
	maven { url = 'https://jitpack.io' }
	maven { url = 'https://maven.terraformersmc.com/releases/' }
	maven {
		url = 'https://www.cursemaven.com'
		content {
			includeGroup "curse.maven"
		}
	}
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"LPCTweaks" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "com.github.sakura-ryoko:malilib:${project.malilib_version}"

	//Suggested mods
	modCompileOnly "com.github.sakura-ryoko:minihud:${project.minihud_version}"
	modRuntimeOnly "com.github.sakura-ryoko:minihud:${project.minihud_version}"
	modCompileOnly "com.github.sakura-ryoko:litematica:${project.litematica_version}"
	modRuntimeOnly "com.github.sakura-ryoko:litematica:${project.litematica_version}"
	modCompileOnly "com.terraformersmc:modmenu:${project.mod_menu_version}"
	modRuntimeOnly "com.terraformersmc:modmenu:${project.mod_menu_version}"

	//Test mods
	//modImplementation files("local/mods/1.21.4/MagicLib-mc1.21.4-fabric-0.8.710-stable.jar")
	//modImplementation files("local/mods/1.21.4/MagicLib-mc1.21.4-fabric-0.8.702-stable.jar")
	//modImplementation files("local/mods/1.21.4/tweakeroo-fabric-1.21.4-0.23.4.jar")
	//modImplementation files("local/mods/1.21.4/MasaGadget-mc1.21.4-fabric-4.0.395-stable.jar")

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	
}

processClientResources {
	inputs.property "mod_version", project.version

	filesMatching("fabric.mod.json") {
		expand "mod_version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}